Add node interface and build

--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
 	"name": "js-to-ts-converter",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"private": true,
 	"description": "Small utility to convert ES6 classes to TypeScript by filling in property definitions",
 	"repository": "https://github.com/gregjacobs/js-to-ts-converter.git",
 	"author": "Gregory Jacobs <greg@greg-jacobs.com>",
 	"license": "MIT",
+	"main": "dist/index.js",
+	"bin": "dist/cli.js",
+	"files": [
+		"dist/"
+	],
 	"scripts": {
-		"cli": "ts-node src/cli.ts",
+		"build": "tsc",
+		"cli": "npm run build && node dist/cli.ts",
 		"run-example": "npm run cli test/fixture",
 		"test": "mocha --require ts-node/register --watch-extensions ts \"test/**/*.spec.ts\""
 	},
 	"dependencies": {
-		"@types/graphlib": "^2.1.4",
-		"@types/node": "^10.5.2",
 		"argparse": "^1.0.10",
 		"graphlib": "^2.1.5",
+		"lodash": "^4.17.10",
 		"ts-simple-ast": "^12.5.1",
-		"ts-node": "^7.0.0",
 		"typescript": "^2.9.2"
 	},
 	"devDependencies": {
+		"@types/graphlib": "^2.1.4",
+		"@types/lodash": "^4.14.112",
+		"@types/node": "^10.5.2",
 		"@types/chai": "^4.1.4",
 		"@types/mocha": "^5.2.4",
 		"chai": "^4.1.2",
-		"mocha": "^5.2.0"
+		"mocha": "^5.2.0",
+		"ts-node": "^7.0.0"
 	}
 }
