--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
 	"name": "js-to-ts-converter",
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"description": "Small utility to rename .js->.ts, and convert ES6 classes to TypeScript classes by filling in property declarations. See readme for more details.",
-	"keywords": [ "typescript", "conversion" ],
+	"keywords": [
+		"typescript",
+		"conversion"
+	],
 	"homepage": "https://github.com/gregjacobs/js-to-ts-converter",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/gregjacobs/js-to-ts-converter.git"
 	},
 	"bugs": {
-		"url" : "https://github.com/gregjacobs/js-to-ts-converter/issues"
+		"url": "https://github.com/gregjacobs/js-to-ts-converter/issues"
 	},
 	"author": "Gregory Jacobs <greg@greg-jacobs.com>",
 	"license": "MIT",
