--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "Gregory Jacobs <greg@greg-jacobs.com>",
 	"license": "MIT",
 	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"bin": "dist/cli.js",
 	"files": [
 		"dist/"
