--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"argparse": "^1.0.10",
 		"graphlib": "^2.1.5",
 		"lodash": "^4.17.10",
+		"trace-error": "^0.0.7",
 		"ts-simple-ast": "^12.5.1",
 		"typescript": "^2.9.2"
 	},
