--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	"scripts": {
 		"build": "tsc",
 		"cli": "npm run build && node dist/cli.ts",
-		"test": "mocha --require ts-node/register --watch-extensions ts \"test/**/*.spec.ts\"",
+		"test": "mocha --require ts-node/register --timeout 30000 --watch-extensions ts \"test/**/*.spec.ts\"",
 		"prepublishOnly": "npm test && npm run build"
 	},
 	"dependencies": {
@@ -33,7 +33,7 @@
 		"graphlib": "^2.1.5",
 		"lodash": "^4.17.10",
 		"trace-error": "^0.0.7",
-		"ts-simple-ast": "^12.5.1",
+		"ts-simple-ast": "^12.6.2",
 		"typescript": "^2.9.2"
 	},
 	"devDependencies": {
