--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"cli": "npm run build && node dist/cli.ts",
-		"test": "mocha --require ts-node/register --timeout 30000 --watch-extensions ts \"test/**/*.spec.ts\"",
+		"cli": "npm run build && node dist/cli.js",
+		"test": "mocha --require ts-node/register --timeout 30000 --watch-extensions ts \"**/*.spec.ts\"",
 		"prepublishOnly": "npm test && npm run build"
 	},
 	"dependencies": {
@@ -33,6 +33,7 @@
 		"glob-all": "^3.1.0",
 		"graphlib": "^2.1.5",
 		"lodash": "^4.17.10",
+		"resolve": "^1.8.1",
 		"trace-error": "^0.0.7",
 		"ts-simple-ast": "^12.7.1",
 		"typescript": "^2.9.2"
