Add logging for the conversion process

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"resolve": "^1.8.1",
 		"trace-error": "^0.0.7",
 		"ts-simple-ast": "^12.7.1",
-		"typescript": "^2.9.2"
+		"typescript": "^2.9.2",
+		"winston": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.1.4",
@@ -44,6 +45,7 @@
 		"@types/lodash": "^4.14.112",
 		"@types/mocha": "^5.2.4",
 		"@types/node": "^10.5.2",
+		"@types/winston": "^2.3.9",
 		"chai": "^4.1.2",
 		"mocha": "^5.2.0",
 		"ts-node": "^7.0.0"
