--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		/* Basic Options */
 		"target": "es2017",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
 		"module": "commonjs",                     /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+		"skipLibCheck": true,
 		// "lib": [],                             /* Specify library files to be included in the compilation:  */
 		// "allowJs": true,                       /* Allow javascript files to be compiled. */
 		// "checkJs": true,                       /* Report errors in .js files. */
