--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"glob-all": "^3.1.0",
 		"graphlib": "^2.1.5",
 		"lodash": "^4.17.10",
+		"minimatch": "^3.0.4",
 		"resolve": "^1.8.1",
 		"trace-error": "^0.0.7",
 		"ts-simple-ast": "^14.2.0",
