--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "js-to-ts-converter",
-	"version": "0.17.1",
+	"version": "0.18.0",
 	"description": "Small utility to rename .js->.ts, and convert ES6 classes to TypeScript classes by filling in property declarations. See readme for more details.",
 	"scripts": {
 		"build": "tsc",
@@ -30,10 +30,9 @@
 	],
 	"dependencies": {
 		"argparse": "^1.0.10",
-		"glob-all": "^3.1.0",
+		"fast-glob": "^3.2.4",
 		"graphlib": "^2.1.5",
 		"lodash": "^4.17.20",
-		"minimatch": "^3.0.4",
 		"resolve": "^1.8.1",
 		"trace-error": "^0.0.7",
 		"ts-morph": "^8.1.0",
